showing economic data from Fred

--- a/main.ipynb
+++ b/main.ipynb
@@ -34,6 +34,384 @@
    "source": [
     "fred = Fred(api_key=creds.fred_key)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>realtime_start</th>\n",
+       "      <th>realtime_end</th>\n",
+       "      <th>title</th>\n",
+       "      <th>observation_start</th>\n",
+       "      <th>observation_end</th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>frequency_short</th>\n",
+       "      <th>units</th>\n",
+       "      <th>units_short</th>\n",
+       "      <th>seasonal_adjustment</th>\n",
+       "      <th>seasonal_adjustment_short</th>\n",
+       "      <th>last_updated</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>notes</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>series id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>SP500</th>\n",
+       "      <td>SP500</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>S&amp;P 500</td>\n",
+       "      <td>2013-11-08</td>\n",
+       "      <td>2023-11-07</td>\n",
+       "      <td>Daily, Close</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Index</td>\n",
+       "      <td>Index</td>\n",
+       "      <td>Not Seasonally Adjusted</td>\n",
+       "      <td>NSA</td>\n",
+       "      <td>2023-11-07 19:10:58-06:00</td>\n",
+       "      <td>82</td>\n",
+       "      <td>The observations for the S&amp;P 500 represent the...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VXVCLS</th>\n",
+       "      <td>VXVCLS</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>CBOE S&amp;P 500 3-Month Volatility Index</td>\n",
+       "      <td>2007-12-04</td>\n",
+       "      <td>2023-11-07</td>\n",
+       "      <td>Daily, Close</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Index</td>\n",
+       "      <td>Index</td>\n",
+       "      <td>Not Seasonally Adjusted</td>\n",
+       "      <td>NSA</td>\n",
+       "      <td>2023-11-08 08:36:05-06:00</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Copyright, 2016, Chicago Board Options Exchang...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VXOCLS</th>\n",
+       "      <td>VXOCLS</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>CBOE S&amp;P 100 Volatility Index: VXO (DISCONTINUED)</td>\n",
+       "      <td>1986-01-02</td>\n",
+       "      <td>2021-09-23</td>\n",
+       "      <td>Daily, Close</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Index</td>\n",
+       "      <td>Index</td>\n",
+       "      <td>Not Seasonally Adjusted</td>\n",
+       "      <td>NSA</td>\n",
+       "      <td>2021-09-24 08:36:03-05:00</td>\n",
+       "      <td>33</td>\n",
+       "      <td>This series is no longer being updated by the ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CSUSHPINSA</th>\n",
+       "      <td>CSUSHPINSA</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>S&amp;P/Case-Shiller U.S. National Home Price Index</td>\n",
+       "      <td>1987-01-01</td>\n",
+       "      <td>2023-08-01</td>\n",
+       "      <td>Monthly</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Index Jan 2000=100</td>\n",
+       "      <td>Index Jan 2000=100</td>\n",
+       "      <td>Not Seasonally Adjusted</td>\n",
+       "      <td>NSA</td>\n",
+       "      <td>2023-10-31 08:12:01-05:00</td>\n",
+       "      <td>88</td>\n",
+       "      <td>For more information regarding the index, plea...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CSUSHPISA</th>\n",
+       "      <td>CSUSHPISA</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>S&amp;P/Case-Shiller U.S. National Home Price Index</td>\n",
+       "      <td>1987-01-01</td>\n",
+       "      <td>2023-08-01</td>\n",
+       "      <td>Monthly</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Index Jan 2000=100</td>\n",
+       "      <td>Index Jan 2000=100</td>\n",
+       "      <td>Seasonally Adjusted</td>\n",
+       "      <td>SA</td>\n",
+       "      <td>2023-10-31 08:12:02-05:00</td>\n",
+       "      <td>79</td>\n",
+       "      <td>For more information regarding the index, plea...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RKNANPPKA666NRUG</th>\n",
+       "      <td>RKNANPPKA666NRUG</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>Capital Stock at Constant National Prices for ...</td>\n",
+       "      <td>1950-01-01</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>Annual</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Millions of 2017 U.S. Dollars</td>\n",
+       "      <td>Mil. of 2017 U.S. $</td>\n",
+       "      <td>Not Seasonally Adjusted</td>\n",
+       "      <td>NSA</td>\n",
+       "      <td>2023-02-27 14:32:16-06:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Source ID: rkna  When using these data in your...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DDDM02NZA156NWDB</th>\n",
+       "      <td>DDDM02NZA156NWDB</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>Stock Market Total Value Traded to GDP for New...</td>\n",
+       "      <td>1985-01-01</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>Annual</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Percent</td>\n",
+       "      <td>%</td>\n",
+       "      <td>Not Seasonally Adjusted</td>\n",
+       "      <td>NSA</td>\n",
+       "      <td>2022-03-23 16:32:14-05:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Total value of all traded shares in a stock ma...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LABSHPJMA156NRUG</th>\n",
+       "      <td>LABSHPJMA156NRUG</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>Share of Labour Compensation in GDP at Current...</td>\n",
+       "      <td>1953-01-01</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>Annual</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Ratio</td>\n",
+       "      <td>Ratio</td>\n",
+       "      <td>Not Seasonally Adjusted</td>\n",
+       "      <td>NSA</td>\n",
+       "      <td>2021-01-21 13:33:28-06:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Source ID: labsh  When using these data in you...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>XRNCUSBIA618NRUG</th>\n",
+       "      <td>XRNCUSBIA618NRUG</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>Exchange Rate (market+estimated) for Burundi</td>\n",
+       "      <td>1960-01-01</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>Annual</td>\n",
+       "      <td>A</td>\n",
+       "      <td>National Currency Units per US Dollar</td>\n",
+       "      <td>National Currency Units per US $</td>\n",
+       "      <td>Not Seasonally Adjusted</td>\n",
+       "      <td>NSA</td>\n",
+       "      <td>2021-01-21 13:32:53-06:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Source ID: xr  When using these data in your r...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>POPTTLISA148NRUG</th>\n",
+       "      <td>POPTTLISA148NRUG</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>2023-11-08</td>\n",
+       "      <td>Population for Iceland</td>\n",
+       "      <td>1950-01-01</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>Annual</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Millions of Persons</td>\n",
+       "      <td>Mil. of Persons</td>\n",
+       "      <td>Not Seasonally Adjusted</td>\n",
+       "      <td>NSA</td>\n",
+       "      <td>2021-01-21 13:32:17-06:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Source ID: pop  When using these data in your ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                id realtime_start realtime_end  \\\n",
+       "series id                                                        \n",
+       "SP500                        SP500     2023-11-08   2023-11-08   \n",
+       "VXVCLS                      VXVCLS     2023-11-08   2023-11-08   \n",
+       "VXOCLS                      VXOCLS     2023-11-08   2023-11-08   \n",
+       "CSUSHPINSA              CSUSHPINSA     2023-11-08   2023-11-08   \n",
+       "CSUSHPISA                CSUSHPISA     2023-11-08   2023-11-08   \n",
+       "...                            ...            ...          ...   \n",
+       "RKNANPPKA666NRUG  RKNANPPKA666NRUG     2023-11-08   2023-11-08   \n",
+       "DDDM02NZA156NWDB  DDDM02NZA156NWDB     2023-11-08   2023-11-08   \n",
+       "LABSHPJMA156NRUG  LABSHPJMA156NRUG     2023-11-08   2023-11-08   \n",
+       "XRNCUSBIA618NRUG  XRNCUSBIA618NRUG     2023-11-08   2023-11-08   \n",
+       "POPTTLISA148NRUG  POPTTLISA148NRUG     2023-11-08   2023-11-08   \n",
+       "\n",
+       "                                                              title  \\\n",
+       "series id                                                             \n",
+       "SP500                                                       S&P 500   \n",
+       "VXVCLS                        CBOE S&P 500 3-Month Volatility Index   \n",
+       "VXOCLS            CBOE S&P 100 Volatility Index: VXO (DISCONTINUED)   \n",
+       "CSUSHPINSA          S&P/Case-Shiller U.S. National Home Price Index   \n",
+       "CSUSHPISA           S&P/Case-Shiller U.S. National Home Price Index   \n",
+       "...                                                             ...   \n",
+       "RKNANPPKA666NRUG  Capital Stock at Constant National Prices for ...   \n",
+       "DDDM02NZA156NWDB  Stock Market Total Value Traded to GDP for New...   \n",
+       "LABSHPJMA156NRUG  Share of Labour Compensation in GDP at Current...   \n",
+       "XRNCUSBIA618NRUG       Exchange Rate (market+estimated) for Burundi   \n",
+       "POPTTLISA148NRUG                             Population for Iceland   \n",
+       "\n",
+       "                 observation_start observation_end     frequency  \\\n",
+       "series id                                                          \n",
+       "SP500                   2013-11-08      2023-11-07  Daily, Close   \n",
+       "VXVCLS                  2007-12-04      2023-11-07  Daily, Close   \n",
+       "VXOCLS                  1986-01-02      2021-09-23  Daily, Close   \n",
+       "CSUSHPINSA              1987-01-01      2023-08-01       Monthly   \n",
+       "CSUSHPISA               1987-01-01      2023-08-01       Monthly   \n",
+       "...                            ...             ...           ...   \n",
+       "RKNANPPKA666NRUG        1950-01-01      2019-01-01        Annual   \n",
+       "DDDM02NZA156NWDB        1985-01-01      2020-01-01        Annual   \n",
+       "LABSHPJMA156NRUG        1953-01-01      2019-01-01        Annual   \n",
+       "XRNCUSBIA618NRUG        1960-01-01      2019-01-01        Annual   \n",
+       "POPTTLISA148NRUG        1950-01-01      2019-01-01        Annual   \n",
+       "\n",
+       "                 frequency_short                                  units  \\\n",
+       "series id                                                                 \n",
+       "SP500                          D                                  Index   \n",
+       "VXVCLS                         D                                  Index   \n",
+       "VXOCLS                         D                                  Index   \n",
+       "CSUSHPINSA                     M                     Index Jan 2000=100   \n",
+       "CSUSHPISA                      M                     Index Jan 2000=100   \n",
+       "...                          ...                                    ...   \n",
+       "RKNANPPKA666NRUG               A          Millions of 2017 U.S. Dollars   \n",
+       "DDDM02NZA156NWDB               A                                Percent   \n",
+       "LABSHPJMA156NRUG               A                                  Ratio   \n",
+       "XRNCUSBIA618NRUG               A  National Currency Units per US Dollar   \n",
+       "POPTTLISA148NRUG               A                    Millions of Persons   \n",
+       "\n",
+       "                                       units_short      seasonal_adjustment  \\\n",
+       "series id                                                                     \n",
+       "SP500                                        Index  Not Seasonally Adjusted   \n",
+       "VXVCLS                                       Index  Not Seasonally Adjusted   \n",
+       "VXOCLS                                       Index  Not Seasonally Adjusted   \n",
+       "CSUSHPINSA                      Index Jan 2000=100  Not Seasonally Adjusted   \n",
+       "CSUSHPISA                       Index Jan 2000=100      Seasonally Adjusted   \n",
+       "...                                            ...                      ...   \n",
+       "RKNANPPKA666NRUG               Mil. of 2017 U.S. $  Not Seasonally Adjusted   \n",
+       "DDDM02NZA156NWDB                                 %  Not Seasonally Adjusted   \n",
+       "LABSHPJMA156NRUG                             Ratio  Not Seasonally Adjusted   \n",
+       "XRNCUSBIA618NRUG  National Currency Units per US $  Not Seasonally Adjusted   \n",
+       "POPTTLISA148NRUG                   Mil. of Persons  Not Seasonally Adjusted   \n",
+       "\n",
+       "                 seasonal_adjustment_short               last_updated  \\\n",
+       "series id                                                               \n",
+       "SP500                                  NSA  2023-11-07 19:10:58-06:00   \n",
+       "VXVCLS                                 NSA  2023-11-08 08:36:05-06:00   \n",
+       "VXOCLS                                 NSA  2021-09-24 08:36:03-05:00   \n",
+       "CSUSHPINSA                             NSA  2023-10-31 08:12:01-05:00   \n",
+       "CSUSHPISA                               SA  2023-10-31 08:12:02-05:00   \n",
+       "...                                    ...                        ...   \n",
+       "RKNANPPKA666NRUG                       NSA  2023-02-27 14:32:16-06:00   \n",
+       "DDDM02NZA156NWDB                       NSA  2022-03-23 16:32:14-05:00   \n",
+       "LABSHPJMA156NRUG                       NSA  2021-01-21 13:33:28-06:00   \n",
+       "XRNCUSBIA618NRUG                       NSA  2021-01-21 13:32:53-06:00   \n",
+       "POPTTLISA148NRUG                       NSA  2021-01-21 13:32:17-06:00   \n",
+       "\n",
+       "                 popularity                                              notes  \n",
+       "series id                                                                       \n",
+       "SP500                    82  The observations for the S&P 500 represent the...  \n",
+       "VXVCLS                   53  Copyright, 2016, Chicago Board Options Exchang...  \n",
+       "VXOCLS                   33  This series is no longer being updated by the ...  \n",
+       "CSUSHPINSA               88  For more information regarding the index, plea...  \n",
+       "CSUSHPISA                79  For more information regarding the index, plea...  \n",
+       "...                     ...                                                ...  \n",
+       "RKNANPPKA666NRUG          3  Source ID: rkna  When using these data in your...  \n",
+       "DDDM02NZA156NWDB          3  Total value of all traded shares in a stock ma...  \n",
+       "LABSHPJMA156NRUG          3  Source ID: labsh  When using these data in you...  \n",
+       "XRNCUSBIA618NRUG          3  Source ID: xr  When using these data in your r...  \n",
+       "POPTTLISA148NRUG          3  Source ID: pop  When using these data in your ...  \n",
+       "\n",
+       "[1000 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Search for economic data on Fred\n",
+    "\n",
+    "fred.search('S&P')"
+   ]
   }
  ],
  "metadata": {
