df with unemployment rates

--- a/main.ipynb
+++ b/main.ipynb
@@ -301,6 +301,439 @@
     "sp500 = fred.get_series(series_id='SP500')\n",
     "sp500.plot(figsize=(10,5), title='S&P 500', lw=2)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pull and Join Multiple Data Series "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(96, 15)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filtering a unemployment rate dataframe with a Monthly update frequency  \n",
+    "\n",
+    "#it's not just by state (Hebert fix)\n",
+    "\n",
+    "\n",
+    "uemp_df = fred.search('unemployment rate state', filter=('frequency', 'Monthly'))\n",
+    "uemp_df = uemp_df.query('seasonal_adjustment == \"Seasonally Adjusted\" and units == \"Percent\"')\n",
+    "uemp_df.loc[uemp_df['title'].str.contains('Unemployment Rate')].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_results = []\n",
+    "\n",
+    "\n",
+    "for myid in uemp_df.index:\n",
+    "    results = fred.get_series(myid)\n",
+    "    results = results.to_frame(name=myid)\n",
+    "    all_results.append(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UNRATE</th>\n",
+       "      <th>LNS14000006</th>\n",
+       "      <th>U6RATE</th>\n",
+       "      <th>CAUR</th>\n",
+       "      <th>M0892AUSM156SNBR</th>\n",
+       "      <th>TXUR</th>\n",
+       "      <th>M0892BUSM156SNBR</th>\n",
+       "      <th>LNS14000024</th>\n",
+       "      <th>NYUR</th>\n",
+       "      <th>U2RATE</th>\n",
+       "      <th>...</th>\n",
+       "      <th>LBSSA10</th>\n",
+       "      <th>LBSSA33</th>\n",
+       "      <th>LBSSA44</th>\n",
+       "      <th>LNS14000015</th>\n",
+       "      <th>LNS14000029</th>\n",
+       "      <th>LNS14000026</th>\n",
+       "      <th>CNEWUR</th>\n",
+       "      <th>LRUN25TTUSM156S</th>\n",
+       "      <th>USAURAMS</th>\n",
+       "      <th>LBSSA11</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1929-04-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1929-05-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1929-06-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1929-07-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1929-08-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-01</th>\n",
+       "      <td>3.6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>65.2</td>\n",
+       "      <td>63.2</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>70.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-01</th>\n",
+       "      <td>3.5</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>60.1</td>\n",
+       "      <td>64.9</td>\n",
+       "      <td>63.3</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>70.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-01</th>\n",
+       "      <td>3.8</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>60.3</td>\n",
+       "      <td>64.6</td>\n",
+       "      <td>63.3</td>\n",
+       "      <td>10.9</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>70.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-09-01</th>\n",
+       "      <td>3.8</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>60.5</td>\n",
+       "      <td>64.6</td>\n",
+       "      <td>63.4</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>71.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-10-01</th>\n",
+       "      <td>3.9</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1123 rows × 159 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            UNRATE  LNS14000006  U6RATE  CAUR  M0892AUSM156SNBR  TXUR  \\\n",
+       "1929-04-01     NaN          NaN     NaN   NaN              0.69   NaN   \n",
+       "1929-05-01     NaN          NaN     NaN   NaN              1.65   NaN   \n",
+       "1929-06-01     NaN          NaN     NaN   NaN              2.06   NaN   \n",
+       "1929-07-01     NaN          NaN     NaN   NaN              0.79   NaN   \n",
+       "1929-08-01     NaN          NaN     NaN   NaN              0.04   NaN   \n",
+       "...            ...          ...     ...   ...               ...   ...   \n",
+       "2023-06-01     3.6          6.0     6.9   4.6               NaN   4.1   \n",
+       "2023-07-01     3.5          5.8     6.7   4.6               NaN   4.1   \n",
+       "2023-08-01     3.8          5.3     7.1   4.6               NaN   4.1   \n",
+       "2023-09-01     3.8          5.7     7.0   4.7               NaN   4.1   \n",
+       "2023-10-01     3.9          5.8     7.2   NaN               NaN   NaN   \n",
+       "\n",
+       "            M0892BUSM156SNBR  LNS14000024  NYUR  U2RATE  ...  LBSSA10  \\\n",
+       "1929-04-01               NaN          NaN   NaN     NaN  ...      NaN   \n",
+       "1929-05-01               NaN          NaN   NaN     NaN  ...      NaN   \n",
+       "1929-06-01               NaN          NaN   NaN     NaN  ...      NaN   \n",
+       "1929-07-01               NaN          NaN   NaN     NaN  ...      NaN   \n",
+       "1929-08-01               NaN          NaN   NaN     NaN  ...      NaN   \n",
+       "...                      ...          ...   ...     ...  ...      ...   \n",
+       "2023-06-01               NaN          3.3   3.9     1.7  ...     60.0   \n",
+       "2023-07-01               NaN          3.2   3.9     1.6  ...     60.1   \n",
+       "2023-08-01               NaN          3.5   3.9     1.7  ...     60.3   \n",
+       "2023-09-01               NaN          3.5   4.0     1.7  ...     60.5   \n",
+       "2023-10-01               NaN          3.5   NaN     1.8  ...      NaN   \n",
+       "\n",
+       "            LBSSA33  LBSSA44  LNS14000015  LNS14000029  LNS14000026  CNEWUR  \\\n",
+       "1929-04-01      NaN      NaN          NaN          NaN          NaN     NaN   \n",
+       "1929-05-01      NaN      NaN          NaN          NaN          NaN     NaN   \n",
+       "1929-06-01      NaN      NaN          NaN          NaN          NaN     NaN   \n",
+       "1929-07-01      NaN      NaN          NaN          NaN          NaN     NaN   \n",
+       "1929-08-01      NaN      NaN          NaN          NaN          NaN     NaN   \n",
+       "...             ...      ...          ...          ...          ...     ...   \n",
+       "2023-06-01     65.2     63.2          9.7          2.6          3.1     2.8   \n",
+       "2023-07-01     64.9     63.3          9.5          2.7          3.1     2.7   \n",
+       "2023-08-01     64.6     63.3         10.9          2.9          3.2     2.7   \n",
+       "2023-09-01     64.6     63.4          9.6          2.8          3.1     2.7   \n",
+       "2023-10-01      NaN      NaN         12.2          2.8          3.3     NaN   \n",
+       "\n",
+       "            LRUN25TTUSM156S  USAURAMS  LBSSA11  \n",
+       "1929-04-01              NaN       NaN      NaN  \n",
+       "1929-05-01              NaN       NaN      NaN  \n",
+       "1929-06-01              NaN       NaN      NaN  \n",
+       "1929-07-01              NaN       NaN      NaN  \n",
+       "1929-08-01              NaN       NaN      NaN  \n",
+       "...                     ...       ...      ...  \n",
+       "2023-06-01              3.1       NaN     70.8  \n",
+       "2023-07-01              3.0       NaN     70.8  \n",
+       "2023-08-01              3.1       NaN     70.9  \n",
+       "2023-09-01              NaN       NaN     71.1  \n",
+       "2023-10-01              NaN       NaN      NaN  \n",
+       "\n",
+       "[1123 rows x 159 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat(all_results, axis=1)"
+   ]
   }
  ],
  "metadata": {
